--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,5 @@
 <main class="main">
-  <div>
-    <a [href]="url" download>letöltés: {{ url }}</a>
-  </div>
-  <br />
-  <br />
-  <div style="width: 100%; height: 600px">
-    <ngx-extended-pdf-viewer
-      [src]="url"
-      (srcChange)="urlChanged($event)"
-      (pdfDownloaded)="pdfDownloaded($event)"
-    ></ngx-extended-pdf-viewer>
-  </div>
+  <app-home />
 </main>
 
 <router-outlet />
